# browserkit

./: $null  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  about.hbs  about.toml
.github/workflows/: ci.yml  release.yml
.kiro/specs/browserkit-rewrite/: .config.kiro  browserkit.code-workspace  design.md  requirements.md  tasks.md
docs/: REDESIGN.md  ROADMAP.md  SESSION-SUMMARY.md  connect-existing-chrome.md  project-analysis.md  v1-legacy-retention-report.md
docs/bk-browser/: SKILL.md
docs/bk-browser/references/: commands.md
docs/superpowers/plans/: 2026-07-01-browserkit-v2-phase1.md  2026-07-14-v2-act-parity.md  2026-07-16-browserkit-workspace-runtime-removal.md
docs/superpowers/specs/: 2026-07-13-browserkit-v2-full-migration-design.md  2026-07-14-v2-act-parity-design.md  (+1 more)
src/: client.rs  config.rs  error.rs  lib.rs  main.rs
src/browser/: discover.rs  finder.rs  launcher.rs  mod.rs
src/daemon/: auto_attach.rs  console.rs  dialog.rs  mod.rs  persist.rs  protocol.rs  server.rs  session.rs  state.rs  target_close.rs  target_lifecycle.rs  token.rs
src/page/: capture.rs  element_ref.rs  find_elements.rs  interaction.rs  mod.rs  navigation.rs  state.rs  state_diff.rs  wait.rs
src/workspace/: mod.rs
tests/: browser_finder_properties.rs  cli_properties.rs  connection_reuse_properties.rs  id_generation_properties.rs  integration_tests.rs  mcp_properties.rs  page_state_properties.rs  persistence_properties.rs  protocol_properties.rs  storage_properties.rs  tab_properties.rs  workspace_properties.rs
tests/common/: mod.rs
(+35 files in other folders)
